# sonnets

./: Cargo.toml  schema.sql
src/: config.rs  db.rs  generate_sonnet.rs  logger.rs  main.rs  nouns.rs  telegram.rs  validate.rs
