[package]
name = "sonnets"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ftail = "0.3.1"
log = "0.4.29"
reqwest = "0.13.1"
rusqlite = "0.38.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["full"] }
