[package]
name = "sonnets"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
ftail = "0.3.1"
log = "0.4.29"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["json"] }
rusqlite = { version = "0.38.0", features = ["chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml = "0.9.34"
teloxide = "0.17.0"
tokio = { version = "1.48.0", features = ["full"] }
